--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="FatbikeParts.eu" />
     
     <!-- Favicon -->
-    <link rel="icon" href="/lovable-uploads/503fb88b-1cab-4725-a3eb-2627f71f2f6a.png" type="image/png">
+    <link rel="icon" href="sterretje.png" type="image/png">
     
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
