--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HRZ1EG0EGP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-HRZ1EG0EGP');
+</script>
+    
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FatbikeParts.eu - Maintenance</title>
@@ -29,6 +39,8 @@
   </head>
 
   <body>
-    <div id="root"></div>
+    <div id="root"></div>
+
   </body>
 </html>
+
